@@ -9,10 +9,10 @@ fi
 
 
 # JBoss
-TEST_CP=.:$JBOSS_HOME/client/jnp-client.jar:$JBOSS_HOME/client/jboss-j2ee.jar:$JBOSS_HOME/client/jbossall-client.jar:$JBOSS_HOME/client/jboss-client.jar:$JBOSS_HOME/client/jbosssx-client.jar:$JBOSS_HOME/client/jboss-common-client.jar:../../lib/junit.jar:../../lib/log4j-1.2.7.jar:../../lib/bcprov-jdk14-122.jar:../../lib/bcmail-jdk14-120.jar:../../lib/httpunit.jar
+TEST_CP=.:$JBOSS_HOME/client/jnp-client.jar:$JBOSS_HOME/client/jboss-j2ee.jar:$JBOSS_HOME/client/jbossall-client.jar:$JBOSS_HOME/client/jboss-client.jar:$JBOSS_HOME/client/jbosssx-client.jar:$JBOSS_HOME/client/jboss-common-client.jar:../../lib/junit.jar:../../lib/log4j-1.2.7.jar:../../lib/bcprov-jdk14-122.jar:../../lib/bcmail-jdk14-120.jar:../../lib/httpunit.jar:../../lib/ldap.jar
 
 # Weblogic
-#TEST_CP=.:../../lib/weblogic.jar:../../lib/junit.jar:../../lib/log4j-1.2.7.jar:../../lib/bcprov-jdk14-122.jar:../../lib/bcmail-jdk14-120.jar:../../lib/httpunit.jar
+#TEST_CP=.:../../lib/weblogic.jar:../../lib/junit.jar:../../lib/log4j-1.2.7.jar:../../lib/bcprov-jdk14-122.jar:../../lib/bcmail-jdk14-120.jar:../../lib/httpunit.jar:../../lib/ldap.jar
 
 # Function to perform HTTP tests instead of regular tests
 webtest()
@@ -32,12 +32,16 @@ then
   exit
 fi
 
+echo Testing ca
+java -cp $TEST_CP se.anatom.ejbca.ca.caadmin.junit.TestRunnerStart
 echo Testing utils
 java -cp $TEST_CP se.anatom.ejbca.util.junit.TestRunner
 echo Testing messages
 #java -cp $TEST_CP se.anatom.ejbca.protocol.junit.TestRunner
 echo Testing ra
 java -cp $TEST_CP se.anatom.ejbca.ra.junit.TestRunner
+echo Testing raadmin
+java -cp $TEST_CP se.anatom.ejbca.ra.raadmin.junit.TestRunner
 echo Testing ca.auth
 java -cp $TEST_CP se.anatom.ejbca.ca.auth.junit.TestRunner
 echo Testing ca.store
@@ -50,9 +54,17 @@ echo Testing ca.publisher
 java -cp $TEST_CP se.anatom.ejbca.ca.publisher.junit.TestRunner
 echo Testing batch
 java -cp $TEST_CP se.anatom.ejbca.batch.junit.TestRunner
+echo Testing log
+java -cp $TEST_CP se.anatom.ejbca.log.junit.TestRunner
+echo Testing keyrecovery
+java -cp $TEST_CP se.anatom.ejbca.keyrecovery.junit.TestRunner
+echo Testing hardtoken
+java -cp $TEST_CP se.anatom.ejbca.hardtoken.junit.TestRunner
 
+java -cp $TEST_CP se.anatom.ejbca.ca.caadmin.junit.TestRunnerEnd
 
 cd ../..
 
 
 
+	
